--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,4 @@ title: nafSadh / resume
 remote_theme: pmarsceill/just-the-docs
 search_enabled: false
 color_scheme: dark
-footer_content: &copy; 2021 nafSadh
+footer_content: "&copy; 2021 nafSadh"
