--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 
 
 title: nafSadh / résumé
-remote_theme: pmarsceill/just-the-docs
+remote_theme: heiswayi/thinkspace
 search_enabled: false
 color_scheme: dark
