--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,4 @@
-
-
 title: nafSadh / résumé
-remote_theme: heiswayi/thinkspace
+remote_theme: pmarsceill/just-the-docs
 search_enabled: false
 color_scheme: dark
